--- a/Projects/Simba/framescript.lfm
+++ b/Projects/Simba/framescript.lfm
@@ -28,7 +28,8 @@ object ScriptFrame: TScriptFrame
     OnKeyPress = SynEditKeyPress
     OnClickLink = SynEditClickLink
     OnMouseLink = SynEditMouseLink
-    Gutter.Width = 59
+    BookMarkOptions.BookmarkImages = SimbaForm.Mufasa_Image_List
+    Gutter.Width = 57
     Gutter.MouseActions = <    
       item
         Shift = []
@@ -618,6 +619,7 @@ object ScriptFrame: TScriptFrame
     BracketHighlightStyle = sbhsBoth
     OnChange = SynEditChange
     OnCommandProcessed = SynEditCommandProcessed
+    OnGutterClick = SynEditGutterClick
     OnProcessCommand = SynEditProcessCommand
     OnProcessUserCommand = SynEditProcessUserCommand
     OnSpecialLineColors = SynEditSpecialLineColors
@@ -627,7 +629,7 @@ object ScriptFrame: TScriptFrame
         Width = 24
       end
       object TSynGutterLineNumber
-        Width = 19
+        Width = 17
         MouseActions = <>
         MarkupInfo.Background = clBtnFace
         MarkupInfo.Foreground = clNone
@@ -728,8 +730,6 @@ object ScriptFrame: TScriptFrame
             Priority = 0
           end>
       end
-    end
-    inline SynRightGutterPartList1: TSynRightGutterPartList
     end
   end
 end
