--- a/Projects/Simba/simbaunit.lfm
+++ b/Projects/Simba/simbaunit.lfm
@@ -1,12 +1,12 @@
 object SimbaForm: TSimbaForm
-  Left = 531
+  Left = 401
   Height = 623
-  Top = 290
-  Width = 660
+  Top = 181
+  Width = 845
   AllowDropFiles = True
   Caption = 'THA FUKING Simba'
   ClientHeight = 603
-  ClientWidth = 660
+  ClientWidth = 845
   KeyPreview = True
   Menu = MainMenu
   OnClose = FormClose
@@ -21,7 +21,7 @@ object SimbaForm: TSimbaForm
     Left = 0
     Height = 24
     Top = 0
-    Width = 660
+    Width = 845
     Caption = 'ToolBar1'
     Images = Mufasa_Image_List
     ParentShowHint = False
@@ -209,7 +209,7 @@ object SimbaForm: TSimbaForm
     Left = 0
     Height = 23
     Top = 580
-    Width = 660
+    Width = 845
     Panels = <    
       item
         Width = 60
@@ -231,16 +231,16 @@ object SimbaForm: TSimbaForm
     Left = 0
     Height = 154
     Top = 426
-    Width = 660
+    Width = 845
     Align = alBottom
     ClientHeight = 154
-    ClientWidth = 660
+    ClientWidth = 845
     TabOrder = 2
     object Memo1: TMemo
       Left = 1
       Height = 152
       Top = 1
-      Width = 658
+      Width = 843
       Align = alClient
       Font.Height = -13
       Font.Name = 'Courier New'
@@ -254,7 +254,7 @@ object SimbaForm: TSimbaForm
     Left = 0
     Height = 5
     Top = 421
-    Width = 660
+    Width = 845
     Align = alBottom
     ResizeAnchor = akBottom
   end
@@ -262,11 +262,11 @@ object SimbaForm: TSimbaForm
     Left = 0
     Height = 397
     Top = 24
-    Width = 660
+    Width = 845
     Align = alClient
     BevelOuter = bvNone
     ClientHeight = 397
-    ClientWidth = 660
+    ClientWidth = 845
     DockSite = True
     TabOrder = 4
     OnDockDrop = ScriptPanelDockDrop
@@ -275,7 +275,7 @@ object SimbaForm: TSimbaForm
       Left = 155
       Height = 362
       Top = 0
-      Width = 505
+      Width = 494
       Align = alClient
       Images = Mufasa_Image_List
       PopupMenu = TabPopup
@@ -293,11 +293,11 @@ object SimbaForm: TSimbaForm
       Left = 0
       Height = 35
       Top = 362
-      Width = 660
+      Width = 845
       Align = alBottom
       BevelOuter = bvSpace
       ClientHeight = 35
-      ClientWidth = 660
+      ClientWidth = 845
       TabOrder = 1
       Visible = False
       object SpeedButtonSearch: TSpeedButton
@@ -456,10 +456,97 @@ object SimbaForm: TSimbaForm
         Width = 146
       end
     end
+    object SplitterDebugger: TSplitter
+      Left = 649
+      Height = 362
+      Top = 0
+      Width = 5
+      Align = alRight
+      ResizeAnchor = akRight
+    end
+    object DebuggerPanel: TPanel
+      Left = 654
+      Height = 362
+      Top = 0
+      Width = 191
+      Align = alRight
+      BevelOuter = bvNone
+      ClientHeight = 362
+      ClientWidth = 191
+      TabOrder = 4
+      object DebuggerToolBar: TToolBar
+        Left = 0
+        Height = 26
+        Top = 0
+        Width = 191
+        Caption = 'DebuggerToolBar'
+        EdgeBorders = []
+        EdgeInner = esNone
+        EdgeOuter = esNone
+        Images = Mufasa_Image_List
+        TabOrder = 0
+        object ResumeButton: TToolButton
+          Left = 1
+          Top = 0
+          Caption = 'Resume'
+          ImageIndex = 6
+          OnClick = ResumeButtonClick
+        end
+        object PauseButton: TToolButton
+          Left = 24
+          Top = 0
+          Caption = 'Pause'
+          ImageIndex = 5
+          OnClick = PauseButtonClick
+        end
+        object StopButton: TToolButton
+          Left = 47
+          Top = 0
+          Caption = 'Stop'
+          ImageIndex = 7
+          OnClick = StopButtonClick
+        end
+        object Seperator: TToolButton
+          Left = 70
+          Top = 0
+          Width = 8
+          Style = tbsSeparator
+        end
+        object StepIButton: TToolButton
+          Left = 78
+          Top = 0
+          Caption = 'Step Into'
+          ImageIndex = 30
+          OnClick = StepIButtonClick
+        end
+        object StepOButton: TToolButton
+          Left = 101
+          Top = 0
+          Caption = 'Step Over'
+          ImageIndex = 31
+          OnClick = StepOButtonClick
+        end
+      end
+      object InfoTree: TTreeView
+        Left = 0
+        Height = 336
+        Top = 26
+        Width = 191
+        Align = alClient
+        AutoExpand = True
+        BorderStyle = bsNone
+        DefaultItemHeight = 17
+        ExpandSignType = tvestArrow
+        ReadOnly = True
+        ScrollBars = ssAutoBoth
+        TabOrder = 1
+        Options = [tvoAutoExpand, tvoAutoItemHeight, tvoHideSelection, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips, tvoThemedDraw]
+      end
+    end
   end
   object MainMenu: TMainMenu
-    left = 488
-    top = 144
+    left = 424
+    top = 152
     object MenuFile: TMenuItem
       Caption = '&File'
       SubMenuImages = Mufasa_Image_List
@@ -1624,10 +1711,10 @@ object SimbaForm: TSimbaForm
     end
   end
   object Mufasa_Image_List: TImageList
-    left = 448
-    top = 144
+    left = 384
+    top = 152
     Bitmap = {
-      4C691E0000001000000010000000424242004242420042424200424242004242
+      4C69220000001000000010000000424242004242420042424200424242004242
       420042424200424242004242420042424200424242004242420042424200A155
       42FFA15542FFA15542FF4242420E424242004242420042424200424242004242
       4200424242004242420042424200424242004242420042424200A15542FFFFDA
@@ -2587,7 +2674,135 @@ object SimbaForm: TSimbaForm
       BBFFC8C8C8FFFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00F8F8F8FFFFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00
+      FF00FFFFFF00FFFFFF00FFFFFF00C7EAD8FFC7EAD8FFFFFFFF00C5C6C6FFC5C6
+      C6FFC5C6C6FFC5C6C6FFC5C6C6FFC5C6C6FFC5C6C6FFC5C6C6FFC5C6C6FFC5C6
+      C6FFC5C6C6FFC5C6C6FFC5C6C6FFC5E9D6FFC0E6D2FFFFFFFF00BCBEBDFFFFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00BCBEBDFFFFFFFF00FFFFFF00FFFFFF00B4B6B5FFF7F8
+      F8FFF7F8F8FFF7F8F8FFF7F8F8FFF7F8F8FFF7F8F8FFF7F8F8FFF7F8F8FFF7F8
+      F8FFF7F8F8FFFEFEFEFFB4B6B5FFA7D7BEFFA2D4BAFFFFFFFF00ACAEADFFF7F8
+      F8FFF7F8F8FF0000FFFF0000FFFF0000FFFF0000FFFF0000FFFF0000FFFF0000
+      FFFFF4F5F5FFFEFEFEFFACAEADFF93CBAEFF8FC9ABFFFFFFFF00A4A6A5FFF7F8
+      F8FFF7F8F8FFF4F5F5FFF4F5F5FFF4F5F5FFF4F5F5FFF4F5F5FFF4F5F5FFF4F5
+      F5FFF7F8F8FFFEFEFEFFA4A6A5FFFFFFFF00FFFFFF00FFFFFF0004733AFFF7F8
+      F8FFF7F8F8FFF7F8F8FFF7F8F8FFF7F8F8FFF7F8F8FFF7F8F8FFF7F8F8FFF7F8
+      F8FFF7F8F8FFFEFEFEFF9C9E9DFF7BBC9AFF76B996FFFFFFFF006CB38EFF0473
+      3AFFF7F8F8FFF7F8F8FFF7F8F8FF5151FFFF5151FFFF5151FFFF5151FFFF5151
+      FFFFF2F3F3FFFEFEFEFF949695FF6CB38EFF67B08AFFFFFFFF005DAA82FF58A6
+      7EFF04733AFFF7F8F8FFF7F8F8FFF4F5F5FFF4F5F5FFF4F5F5FFF3F4F4FFF2F3
+      F3FFF4F5F5FFFEFEFEFF8C8E8DFF5DAA82FF58A77EFF53A37AFF4FA076FF4A9D
+      72FF459A6EFF04733AFFF7F8F8FFF7F8F8FFF6F7F7FFF5F6F6FFF4F5F5FFF3F4
+      F4FFF3F3F3FFFEFEFEFF848786FF4FA176FF4A9D72FF459A6EFF40976AFF3B94
+      66FF369162FF318E5EFF04733AFF7171FFFF7171FFFF7171FFFF7171FFFF7171
+      FFFFF1F2F2FFFEFEFEFF7C7F7EFF40976AFF3B9466FF369162FF318E5EFF2C8B
+      5AFF278856FF04733AFFF2F3F3FFF1F2F2FFF0F1F1FFEFF0F0FFEEEFEFFFEDEE
+      EEFFF0F0F0FFFEFEFEFF747776FFFFFFFF00FFFFFF00FFFFFF00228552FF1D82
+      4EFF04733AFFF4F5F5FFF3F4F4FFF2F3F3FFF2F2F2FFF1F1F1FFF0F0F0FFEFF0
+      F0FFEEEFEFFFFEFEFEFF6C6F6EFFFFFFFF00FFFFFF00FFFFFF00137C46FF0473
+      3AFFF4F4F4FFF3F3F3FFF2F3F3FFF1F2F2FF8A8AFFFF8A8AFFFF8A8AFFFF8A8A
+      FFFFEAEAEAFFFEFEFEFF646766FFFFFFFF00FFFFFF00FFFFFF0004733AFFF3F4
+      F4FFF2F3F3FFF1F2F2FFF0F1F1FFF0F0F0FFECECECFFEBEBEBFFEAEAEAFFE9E9
+      E9FFEBECECFFFEFEFEFF5C5F5EFFFFFFFF00FFFFFF00FFFFFF00545756FFFEFE
+      FEFFFEFEFEFFFEFEFEFFFEFEFEFFFEFEFEFFFEFEFEFFFEFEFEFFFEFEFEFFFEFE
+      FEFFFEFEFEFFFFFFFF00545756FFFFFFFF00FFFFFF00FFFFFF004E4F4FFF4E4F
+      4FFF4E4F4FFF4E4F4FFF4E4F4FFF4E4F4FFF4E4F4FFF4E4F4FFF4E4F4FFF4E4F
+      4FFF4E4F4FFF4E4F4FFF4E4F4FFFFFFFFF00FFFFFF00FFFFFF00C5C6C6FFC5C6
+      C6FFC5C6C6FFC5C6C6FFC5C6C6FFC5C6C6FFC5C6C6FFC5C6C6FFC5C6C6FFC5C6
+      C6FFC5C6C6FFC5C6C6FFC5C6C6FFFFFFFF00FFFFFF00FFFFFF00BCBEBDFFFFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00BCBEBDFFB9E2CDFFB3DEC8FFAEDBC4FFA8D7BFFFA2D4
+      BAFF9DD0B6FF97CDB1FFF7F8F8FFF7F8F8FFF7F8F8FFF7F8F8FFF7F8F8FFF7F8
+      F8FFF7F8F8FFFEFEFEFFB4B6B5FFAFDCC5FFAAD8C0FFA4D5BCFF9ED1B7FF99CE
+      B3FF93CAAEFF8DC7A9FF0000FFFF0000FFFF0000FFFF0000FFFF0000FFFF0000
+      FFFFF4F5F5FFFEFEFEFFACAEADFFA6D6BDFFA0D2B9FFFFFFFF00A4A6A5FFF7F8
+      F8FFF7F8F8FFF4F5F5FFF4F5F5FFF4F5F5FFF4F5F5FFF4F5F5FFF4F5F5FFF4F5
+      F5FFF7F8F8FFFEFEFEFFA4A6A5FF9CD0B5FF96CCB1FFFFFFFF009C9E9DFFF7F8
+      F8FFF7F8F8FFF7F8F8FFF7F8F8FFF7F8F8FFF7F8F8FFF7F8F8FFF7F8F8FFF7F8
+      F8FFF7F8F8FFFEFEFEFF9C9E9DFF93CAADFF8DC6A9FFFFFFFF00949695FFF7F8
+      F8FFF7F8F8FFF7F8F8FFF7F8F8FF949695FF949695FF949695FF949695FF9496
+      95FFF2F3F3FFFEFEFEFF949695FF89C4A6FF83C1A1FFFFFFFF008C8E8DFFF7F8
+      F8FFF7F8F8FFF7F8F8FFF7F8F8FFF4F5F5FFF4F5F5FFF4F5F5FFF3F4F4FFF2F3
+      F3FFF4F5F5FFFEFEFEFF8C8E8DFF7FBE9EFF79BB99FFFFFFFF00848786FF0473
+      3AFFF7F8F8FFF7F8F8FFF7F8F8FFF7F8F8FFF6F7F7FFF5F6F6FFF4F5F5FFF3F4
+      F4FFF3F3F3FFFEFEFEFF848786FF76B896FF70B591FFFFFFFF007C7F7EFF5FAA
+      84FF04733AFFF7F8F8FFF7F8F8FFF7F8F8FF7C7F7EFF7C7F7EFF7C7F7EFF7C7F
+      7EFFF1F2F2FFFEFEFEFF7C7F7EFF6CB28EFF66AF8AFFFFFFFF00747776FF55A5
+      7CFF4FA177FF04733AFFF7F8F8FFF7F8F8FFF0F1F1FFEFF0F0FFEEEFEFFFEDEE
+      EEFFF0F0F0FFFEFEFEFF747776FF62AC86FF5DA982FF57A67DFF51A279FF4B9F
+      74FF469B6FFF40986BFF04733AFFF7F8F8FFF2F2F2FFF1F1F1FFF0F0F0FFEFF0
+      F0FFEEEFEFFFFEFEFEFF6C6F6EFF59A77EFF53A37AFF4DA075FF479C71FF4299
+      6CFF3C9567FF369263FF318E5EFF04733AFF0000FFFF0000FFFF0000FFFF0000
+      FFFFEAEAEAFFFEFEFEFF646766FFFFFFFF00499D72FF439A6DFF3E9669FF3893
+      64FF328F60FF2D8C5BFF04733AFFF7F8F8FFECECECFFEBEBEBFFEAEAEAFFE9E9
+      E9FFEBECECFFFEFEFEFF5C5F5EFFFFFFFF00FFFFFF00FFFFFF00545756FF2E8D
+      5CFF298958FF04733AFFFFFFFF00FFFFFF00FEFEFEFFFEFEFEFFFEFEFEFFFEFE
+      FEFFFEFEFEFFFFFFFF00545756FFFFFFFF00FFFFFF00FFFFFF004E4F4FFF2587
+      55FF04733AFF4E4F4FFF4E4F4FFF4E4F4FFF4E4F4FFF4E4F4FFF4E4F4FFF4E4F
+      4FFF4E4F4FFF4E4F4FFF4E4F4FFF0000000000000000D7D6F0FFA2B1F6FF7C8E
+      EEFF697EECFF8193EFFFABB7F7FFE4DDEBFF0000000000000000000000000000
+      000000000000000000000000000000000000ABB1ECFF7386EDFF6076EBFF5D73
+      EAFF5B71EAFF5397CAFF5C84DEFF7B8BEDFFC2C1E8FF00000000000000000000
+      0000000000000000000000000000CFCFEEFF687BEBFF485FE8FF485FE7FF4B61
+      E7FF4C62E7FF3FCB8FFF32B898FF476EDDFF808EECFFD3D1EFFF000000000000
+      00000000000000000000000000008796F0FF485DE6FF334AE2FF4B61E7FF4B61
+      E7FF334AE2FF38CE87FF8CE2B9FF19AD8BFF4F76DCFF6F7CDCFF000000000000
+      00000000000000000000000000004E60E4FF25AD87FF1EB27BFF20B27DFF1AC8
+      81FF23B47EFF27C67CFFACEACBFF79D9ACFF1AA386FF3859C8FF000000000000
+      00000000000000000000000000003647DCFF53C38EFF9CE6C1FF8AE1B6FF8BE0
+      B6FF87E0B5FF86DFB4FF7DDEAEFF82DFB1FF62CB99FF1D8E85FF000000000000
+      00000000000000000000000000004552DBFF4AB481FF91E3BAFF82DDB0FF7CDC
+      ACFF6FD9A4FF5FD49BFF47D08BFF48D18DFF45BB82FF20827EFF000000000000
+      0000000000000000000000000000818AE8FF1A7F6CFF117D5DFF119965FF1780
+      61FF157D61FF1D8A5BFF5EDA9CFF47B681FF197670FF6277C7FF000000000000
+      0000000000000000000000000000D7CEE6FF4953D9FF0D1CCEFF0816CBFF0F1C
+      CDFF111ECDFF1D8054FF44B47EFF0B5863FF5E71CCFFE0D6E7FF000000000000
+      000000000000000000000000000000000000A8A4D9FF5A62D9FF2E3AD3FF1D29
+      CFFF1420CDFF146043FF13514FFF646AD9FFC0B7DEFF020F0904000000000000
+      00000000000000000000000000000000000000000000CCC9E9FF676ED2FF313A
+      C5FF1A24C0FF223D75FF7179D3FFE0D7E6FF0000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      00000000000000000000000000000000000000000000C7F5BCA1A5E797CE79DC
+      67BE56C34DFF80DE6DC195DA8FFFADE1A8CE0000000000000000000000000000
+      000000000000000000000000000000000000A1EE89925FC757FF4CC043FF49BF
+      40FF48BD3FFF5EBF6AFF56C34DFF64C85CFF8DD687D600000000000000000000
+      0000000000000000000000000000BDF4B09E52C249FF40A938FF40A938FF41AC
+      39FF42AE39FF54CD89FF5FC775FF45B53CFF69CA61FF9FDD9AD1000000000000
+      000000000000000000000000000085DF73C23FA637FF368F2FFF41AC39FF41AC
+      39FF368F2FFF39CE87FF8FE2B8FF54C35FFF48BD3FFF5DD446B3000000000000
+      000000000000000000000000000040A938FF25AD87FF1EB27BFF20B27DFF1AC8
+      81FF23B47EFF27C67CFFACEACBFF7BD9ABFF40B861FF3A9933FF000000000000
+      000000000000000000000000000034892DFF53C38EFF9CE6C1FF8AE1B6FF8BE0
+      B6FF87E0B5FF86DFB4FF7DDEAEFF82DFB1FF62CB99FF2D9E69FF000000000000
+      0000000000000000000000000000399732FF4AB481FF91E3BAFF82DDB0FF7CDC
+      ACFF6FD9A4FF5FD49BFF47D08BFF48D18DFF55C276FF40A737FF000000000000
+      000000000000000000000000000075DB60BC1A7F6CFF117D5DFF119965FF1780
+      61FF157D61FF1D8A5BFF5EDA9CFF47B681FF399732FF52CE37AC000000000000
+      0000000000000000000000000000BEF4AE9C3A9A33FF21581DFF1E501AFF2259
+      1DFF22591DFF1D8054FF48B67AFF2A7229FF45B53CFFC7F5B8A1000000000000
+      0000000000000000000000000000000000008DEB718D41AB39FF2E7B29FF2869
+      23FF225B1EFF1C6639FF276722FF44B33BFFA4EF8C92020F0904000000000000
+      00000000000000000000000000000000000000000000B9F2A79A50C733A42D76
+      27FF225B1EFF245F1FFF57D23CB1C6F5B79F0000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000
     }
   end
   object MTrayIcon: TTrayIcon
@@ -2680,14 +2895,14 @@ object SimbaForm: TSimbaForm
     }
     Visible = True
     OnClick = MTrayIconClick
-    left = 528
+    left = 464
     top = 104
   end
   object TrayPopup: TPopupMenu
     Images = Mufasa_Image_List
     OnPopup = TrayPopupPopup
-    left = 528
-    top = 144
+    left = 464
+    top = 152
     object TrayStop: TMenuItem
       Action = ActionStopScript
       Enabled = False
@@ -2756,7 +2971,7 @@ object SimbaForm: TSimbaForm
   end
   object TabPopup: TPopupMenu
     Images = Mufasa_Image_List
-    left = 488
+    left = 424
     top = 104
     object MenuItemTabAdd: TMenuItem
       Action = ActionNewTab
@@ -2850,7 +3065,7 @@ object SimbaForm: TSimbaForm
   end
   object ActionList: TActionList
     Images = Mufasa_Image_List
-    left = 448
+    left = 384
     top = 104
     object ActionTabNext: TAction
       Caption = 'Next tab'
@@ -3029,14 +3244,14 @@ object SimbaForm: TSimbaForm
   end
   object DebugTimer: TTimer
     OnTimer = ProcessDebugStream
-    left = 568
+    left = 504
     top = 104
   end
   object ScriptPopup: TPopupMenu
     Images = Mufasa_Image_List
     OnPopup = ScriptPopupPopup
-    left = 568
-    top = 144
+    left = 504
+    top = 152
     object PopupItemUndo: TMenuItem
       Action = ActionUndo
       Bitmap.Data = {
@@ -3304,30 +3519,30 @@ object SimbaForm: TSimbaForm
     Options = [frDown, frFindNext, frHideUpDown]
     OnFind = dlgReplaceFind
     OnReplace = dlgReplaceReplace
-    left = 608
+    left = 544
     top = 104
   end
   object UpdateTimer: TTimer
     Interval = 10000
-    left = 608
-    top = 144
+    left = 544
+    top = 152
   end
   object MouseTimer: TTimer
     Interval = 100
     OnTimer = ChangeMouseStatus
-    left = 448
+    left = 384
     top = 200
   end
   object NewsTimer: TTimer
     Interval = 500
     OnTimer = NewsTimerTimer
-    left = 488
+    left = 424
     top = 200
   end
   object FunctionListTimer: TTimer
     Interval = 750
     OnTimer = FunctionListTimerTimer
-    left = 608
+    left = 544
     top = 200
   end
   object SCARHighlighter: TSynPasSyn
@@ -3349,7 +3564,7 @@ object SimbaForm: TSimbaForm
     DirectiveAttri.FrameEdges = sfeAround
     CompilerMode = pcmObjFPC
     NestedComments = False
-    left = 568
+    left = 504
     top = 200
   end
   object LazHighlighter: TSynPasSyn
@@ -3376,7 +3591,7 @@ object SimbaForm: TSimbaForm
     DirectiveAttri.Style = [fsBold]
     CompilerMode = pcmObjFPC
     NestedComments = False
-    left = 528
+    left = 464
     top = 200
   end
 end
